v8/tests/messages/property-call-megamorphic.out
property-call-megamorphic.js:3: Uncaught TypeError: Cannot call method 'foo' of null
function call_foo(obj) { return obj.foo(); }
                                    ^
